完成基本功能

--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,14 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
+REDIS_CACHE_DB=2
 REDIS_PORT=6379
 
 API_STANDARDS_TREE=prs
@@ -31,3 +33,5 @@ JWT_TTL=1440
 
 WECHAT_MINI_PROGRAM_APPID=
 WECHAT_MINI_PROGRAM_SECRET=
+
+BASIC_MAX_LENGTH=
